--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     ports:
         - 5433:5432
     environment:
-        POSTGRES_PASSWORD: ""
+        POSTGRES_PASSWORD: "pgpassword"
         POSTGRES_USER: pguser
         POSTGRES_DB: pgdb
     volumes:
@@ -40,7 +40,7 @@ services:
     ports:
         - 5434:5432
     environment:
-      POSTGRES_PASSWORD: ""
+      POSTGRES_PASSWORD: "pgpassword"
       POSTGRES_USER: pguser
       POSTGRES_DB: pgdb
     volumes:
