--- a/composer.json
+++ b/composer.json
@@ -8,22 +8,24 @@
   "license": "MIT",
   "type": "project",
   "require": {
-    "php": ">=7.1.3",
-    "doctrine/dbal": "^2.6",
-    "laravel/framework": "8.*",
+    "php": "^8.0.2",
+    "guzzlehttp/guzzle": "^7.2",
+    "laravel/framework": "9.*",
+    "laravel/sanctum": "^3.0",
     "laravel/tinker": "2.*",
-    "laravel/ui": "^2.0",
-    "superbalist/laravel-google-cloud-storage": "^2.2",
-    "symfony/yaml": "^4.1",
-    "ronasit/laravel-helpers":  "1.4.*@beta"
+    "artel/laravel-helpers":  ">=2.2",
+    "psr/simple-cache": "^2.0"
   },
   "require-dev": {
-    "fzaninotto/faker": "~1.4",
-    "mockery/mockery": "0.9.*",
-    "phpunit/phpunit": "8.*",
-    "ronasit/laravel-entity-generator": ">=1.3.2",
-    "ronasit/laravel-swagger": ">=1.4.3@beta",
-    "ronasit/laravel-remote-data-collector": ">=1.0",
+    "fakerphp/faker": "^1.9.1",
+    "laravel/pint": "^1.0",
+    "laravel/sail": "^1.0.1",
+    "mockery/mockery": "^1.4.4",
+    "nunomaduro/collision": "^6.1",
+    "phpunit/phpunit": "^9.5.10",
+    "spatie/laravel-ignition": "^1.0",
+    "artel/laravel-entity-generator": ">=2.2",
+    "artel/laravel-autodoc": ">=2.2",
     "barryvdh/laravel-ide-helper": "^2.2"
   },
   "autoload": {
@@ -45,9 +47,7 @@
     ],
     "post-update-cmd": [
       "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-      "php artisan clear-compiled",
-      "php artisan ide-helper:generate",
-      "php artisan ide-helper:meta"
+      "php artisan clear-compiled"
     ],
     "post-root-package-install": [
       "php -r \"copy('.env.example', '.env');\""
