--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
 
   apache:
-      image: Artel/php-nginx-dev:7.3
+      image: ronasit/php-nginx-dev:8.0
       working_dir: /app
       ports:
           - 80:80
@@ -25,7 +25,7 @@ services:
           php.xdebug.max_nesting_level: 250
 
   pgsql:
-    image: Artel/postgres:9.6
+    image: ronasit/postgres:9.6
     ports:
         - 5433:5432
     environment:
@@ -36,7 +36,7 @@ services:
       - .:/app
 
   pgsql_test:
-    image: Artel/postgres:9.6
+    image: ronasit/postgres:9.6
     ports:
         - 5434:5432
     environment:
