--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,12 @@
   "type": "project",
   "require": {
     "php": "^8.0.2",
+    "artel/laravel-helpers": ">=2.2",
     "guzzlehttp/guzzle": "^7.2",
     "laravel/framework": "9.*",
     "laravel/sanctum": "^3.0",
     "laravel/tinker": "2.*",
-    "artel/laravel-helpers":  ">=2.2",
+    "php-open-source-saver/jwt-auth": "^2.0",
     "psr/simple-cache": "^2.0"
   },
   "require-dev": {
