--- a/.env.local
+++ b/.env.local
@@ -37,3 +37,7 @@ PUSHER_APP_SECRET=
 FRONTEND_URL=http://localhost
 
 DATA_COLLECTOR_KEY=some-project-name
+
+TWILIO_ACCOUNT_SID=test
+TWILIO_AUTH_TOKEN=test
+TWILIO_VERIFICATION_SID=test
