--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,16 @@
   "type": "project",
   "require": {
     "php": "^8.0.2",
+    "ext-openssl": "*",
     "artel/laravel-helpers": ">=2.2",
     "guzzlehttp/guzzle": "^7.2",
     "laravel/framework": "9.*",
     "laravel/sanctum": "^3.0",
     "laravel/tinker": "2.*",
     "php-open-source-saver/jwt-auth": "^2.0",
-    "psr/simple-cache": "^2.0"
+    "psr/simple-cache": "^2.0",
+    "twilio/sdk": "^7.0@RC",
+    "wccplatform/otphp": "^7.0"
   },
   "require-dev": {
     "fakerphp/faker": "^1.9.1",
