--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,6 @@ DATA_COLLECTOR_KEY=
 TWILIO_ACCOUNT_SID=test
 TWILIO_AUTH_TOKEN=test
 TWILIO_VERIFICATION_SID=test
+
+RECAPTCHA_SITE_KEY=YOUR_API_SITE_KEY
+RECAPTCHA_SECRET_KEY=YOUR_API_SECRET_KEY
