--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "php": "^8.0.2",
     "ext-openssl": "*",
     "artel/laravel-helpers": ">=2.2.3",
+    "biscolab/laravel-recaptcha": "^5.0",
     "guzzlehttp/guzzle": "^7.2",
     "laravel/framework": "9.*",
     "laravel/sanctum": "^3.0",
