--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,7 +3,7 @@ services:
   php:
     build: .
     volumes:
-      - ./:/app/
+      - ./:/home/artfora-backend/
       - ./docker/php-fpm/php.ini-development:/usr/local/etc/php/php.ini-development
       - ./docker/php-fpm/php.ini-production:/usr/local/etc/php/php.ini-production
     container_name: artfora-php
@@ -15,7 +15,7 @@ services:
       - ./docker/nginx/conf.d/:/etc/nginx/conf.d/
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
       - /etc/letsencrypt/:/etc/letsencrypt
-      - ./:/home/dev/${CI_PROJECT_NAME}
+      - ./:/home/artfora-backend/
     ports:
       - 80:80
     restart: on-failure
