--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -24,7 +24,7 @@ services:
     restart: on-failure
   db:
     container_name: artfora-pgsql
-    image: postgres:15-rc2
+    image: postgres:15rc2
     environment:
       POSTGRES_USER: artforawebuser
       POSTGRES_PASSWORD: AASDJKHJKASDBNASDKJH12312312313AGSDGHHJKGJHaskdjhasd
