#8: added mtcaptcha api integration

--- a/.env.testing
+++ b/.env.testing
@@ -46,3 +46,5 @@ FAIL_EXPORT_JSON=false
 TWILIO_ACCOUNT_SID=test
 TWILIO_AUTH_TOKEN=test
 TWILIO_VERIFICATION_SID=test
+
+MTCAPTCHA_PRIVATE_KEY=secret
