--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,7 +3,7 @@ services:
   php:
     build: .
     volumes:
-      - ./:/home/artfora-backend/
+      - ./:/app/
       - ./docker/php-fpm/php.ini-development:/usr/local/etc/php/php.ini-development
       - ./docker/php-fpm/php.ini-production:/usr/local/etc/php/php.ini-production
     container_name: artfora-php
@@ -14,20 +14,19 @@ services:
     volumes:
       - ./docker/nginx/conf.d/:/etc/nginx/conf.d/
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
-      - /etc/letsencrypt/:/etc/letsencrypt
-      - ./:/home/artfora-backend/
+#      - /etc/letsencrypt/:/etc/letsencrypt
+      - ./:/app/
     ports:
-      - 80:80
+      - 8080:80
     restart: on-failure
     depends_on:
-      - artfora-php
-    restart: on-failure
+      - php
   db:
     container_name: artfora-pgsql
     image: postgres:15rc2
     environment:
-      POSTGRES_USER: artforawebuser
-      POSTGRES_PASSWORD: AASDJKHJKASDBNASDKJH12312312313AGSDGHHJKGJHaskdjhasd
-      POSTGRES_DB: artfora
+      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_DATABASE}
     volumes:
-      - /var/lib/artfora-pgsql:/var/lib/postgresql/data
+      - ./storage/pgsql:/var/lib/postgresql/data
