--- a/.env.testing
+++ b/.env.testing
@@ -6,7 +6,7 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=pgsql
-DB_HOST=pgsql_test
+DB_HOST=artfora-pgsql-test
 DB_PORT=5432
 DB_DATABASE=pgdb
 DB_USERNAME=pguser
