--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,11 @@
   "require": {
     "php": "^8.0.2",
     "ext-openssl": "*",
+    "ext-imagick": "*",
     "artel/laravel-helpers": ">=2.2.3",
     "biscolab/laravel-recaptcha": "^5.0",
     "guzzlehttp/guzzle": "^7.2",
+    "intervention/imagecache": "^2.5",
     "laravel/framework": "9.*",
     "laravel/sanctum": "^3.0",
     "laravel/tinker": "2.*",
