--- a/docker/nginx/conf.d/dev.artfora.conf
+++ b/docker/nginx/conf.d/dev.artfora.conf
@@ -1,7 +1,7 @@
 server {
         root /home/artfora-backend/public;
         index index.php index.html index.htm index.nginx-debian.html;
-        server_name api.artfora.net;
+        server_name dev.artfora.artel-workshop.com;
         location / {
                 try_files $uri $uri/ /index.php?$query_string;
         }
@@ -9,7 +9,7 @@ server {
         location ~ \.php$ {
        include fastcgi_params;
        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-       fastcgi_pass artfora-php:9000;
+       fastcgi_pass dev-artfora-backend:9000;
 
         }
 
