--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,7 +59,7 @@ deploy:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
     - cat docker-compose.example | envsubst > docker-compose.yml
-    - docker exec ${short_branch}-${CI_PROJECT_NAME} /bin/bash -c "cat $env > /app/.env"
+    - docker exec ${short_branch}-${CI_PROJECT_NAME} /bin/bash -c "echo $env > /app/.env"
     - cat docker-compose.yml
     - docker-compose up -d
     # - docker exec ${short_branch}-${CI_PROJECT_NAME} mv /app/vars /app/.env
