--- a/docker/nginx/conf.d/dev.artfora.conf
+++ b/docker/nginx/conf.d/dev.artfora.conf
@@ -17,11 +17,11 @@ server {
                 deny all;
         }
 
-    # listen 443 ssl; # managed by Certbot
-    # ssl_certificate /etc/letsencrypt/live/domain/fullchain.pem; # managed by Certbot
-    # ssl_certificate_key /etc/letsencrypt/live/domain/privkey.pem; # managed by Certbot
-    # include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-    # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/dev.artfora.artel-workshop.com/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/dev.artfora.artel-workshop.com/privkey.pem; # managed by Certbot
+#     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+#     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
 }
 # server {
