--- a/docker/nginx/conf.d/dev.artfora.conf
+++ b/docker/nginx/conf.d/dev.artfora.conf
@@ -1,9 +1,18 @@
 server {
-        root /home/artfora-backend/public;
+        listen 80;
+         listen 443 ssl; # managed by Certbot
         index index.php index.html index.htm index.nginx-debian.html;
         server_name dev.artfora.artel-workshop.com;
+        server_tokens off;
+
+        gzip            on;
+        gzip_types      text/plain application/xml text/css application/javascript;
+        gzip_min_length 1000;
+
         location / {
-                try_files $uri $uri/ /index.php?$query_string;
+                    root /home/dev-artfora/artfora-frontend/dist-current;
+                try_files $uri /index.html;
+                expires -1;
         }
 
         location ~ \.php$ {
@@ -13,26 +22,36 @@ server {
 
         }
 
+        # location ~ ^/(auto-doc|products) {
+        #         proxy_set_header Host $host;
+        #         proxy_set_header  X-Real-IP        $remote_addr;
+        #         proxy_set_header  X-Forwarded-For  $proxy_add_x_forwarded_for;
+        #         proxy_set_header  X-NginX-Proxy true;
+        #         proxy_pass http://127.0.0.1:8080$is_args$args;
+        # }
+
+        # location /api/ {
+        #         proxy_set_header Host $host;
+        #         proxy_set_header  X-Real-IP        $remote_addr;
+        #         proxy_set_header  X-Forwarded-For  $proxy_add_x_forwarded_for;
+        #         proxy_set_header  X-NginX-Proxy true;
+        #         rewrite ^/api/(.*)$ /$1 break;
+        #         proxy_pass http://127.0.0.1:8080$is_args$args;
+        # }
+
+        error_page 404 /404.html;
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+                root /usr/share/nginx/html;
+        }
+
         location ~ /\.ht {
                 deny all;
         }
 
-    listen 443 ssl; # managed by Certbot
+
     ssl_certificate /etc/letsencrypt/live/dev.artfora.artel-workshop.com/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/dev.artfora.artel-workshop.com/privkey.pem; # managed by Certbot
-#     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-#     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
 
 }
-# server {
-#     if ($host = domain) {
-#         return 301 https://$host$request_uri;
-#     } # managed by Certbot
-
-
-#         listen 80;
-#         server_name domain ;
-#     return 404; # managed by Certbot
-
-#
-# }
