--- a/docker-compose.example
+++ b/docker-compose.example
@@ -11,7 +11,7 @@ services:
     container_name: ${short_branch}-${CI_PROJECT_NAME}
     restart: on-failure
     networks:
-      - artfora
+      - artfora-network
   nginx:
     container_name: nginx
     image: nginx:1.20.1
@@ -28,15 +28,20 @@ services:
       - 443:443
       - 80:80
     networks:
-      - artfora
+      - artfora-network
     restart: on-failure
     depends_on:
       - ${short_branch}-${CI_PROJECT_NAME}
     restart: on-failure
 
 networks:
-  artfora:
-    external: true
+  artfora-network:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 192.168.12.0/24
+
 
 volumes:
  ${short_branch}-${CI_PROJECT_NAME}-${CI_COMMIT_SHORT_SHA}:
