--- a/docker/docker-compose.example
+++ b/docker/docker-compose.example
@@ -1,15 +1,17 @@
 version: '3.9'
 services:
-  ${proj_name}:
-    image: ${proj_name}-${CI_COMMIT_SHORT_SHA}
+  ${short_branch}-${CI_PROJECT_NAME}:
+    image: ${short_branch}-${CI_PROJECT_NAME}-${CI_COMMIT_SHORT_SHA}
     volumes:
-      - ./:/app/
+      - ${short_branch}-${CI_PROJECT_NAME}-${CI_COMMIT_SHORT_SHA}:/app/
+      - ${short_branch}-pv-storage:/home/storage
+      - ${short_branch}-pv-logs:/home/logs 
       - ./docker/php-fpm/php.ini-development:/usr/local/etc/php/php.ini-development
       - ./docker/php-fpm/php.ini-production:/usr/local/etc/php/php.ini-production
-    container_name: ${proj_name}
-    networks:
-      - ${network_docker_name}
+    container_name: ${short_branch}-${CI_PROJECT_NAME}
     restart: on-failure
+    networks:
+      - artfora
   nginx:
     container_name: nginx
     image: nginx:1.20.1
@@ -17,24 +19,34 @@ services:
       - ./docker/nginx/conf.d/:/etc/nginx/conf.d/
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
       - /etc/letsencrypt/:/etc/letsencrypt
-      - /home/${proj_name}:/home/${proj_name}
+      - /home/dev-artfora:/home/dev-artfora/
+      - /var
+      - ${short_branch}-pv-storage:/home/storage
+      - ${short_branch}-pv-logs:/home/logs 
       - /var/log/nginx:/var/log/nginx
     ports:
-      - 8085:80
+      - 443:443
+      - 80:80
     networks:
-      - ${network_docker_name}
+      - artfora
     restart: on-failure
     depends_on:
-      - ${proj_name}
+      - ${short_branch}-${CI_PROJECT_NAME}
     restart: on-failure
 
 networks:
   ${network_docker_name}:
-    external: true
-
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 192.168.12.0/24
 
 
 volumes:
- ${proj_name}-${CI_COMMIT_SHORT_SHA}:
+ ${short_branch}-${CI_PROJECT_NAME}-${CI_COMMIT_SHORT_SHA}:
    external: true
-
+ ${short_branch}-pv-storage:
+   external: true
+ ${short_branch}-pv-logs:
+   external: true
