--- a/docker/docker-compose.example
+++ b/docker/docker-compose.example
@@ -19,7 +19,7 @@ services:
       - ./docker/nginx/conf.d/:/etc/nginx/conf.d/
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
       - /etc/letsencrypt/:/etc/letsencrypt
-      - /home/dev-artfora:/home/dev-artfora/
+      - /home/dev-artfora-backend:/home/${short_branch}/${short_branch}-${CI_PROJECT_NAME}
       - /var
       - ${short_branch}-pv-storage:/home/storage
       - ${short_branch}-pv-logs:/home/logs 
