--- a/docker/nginx/conf.d/dev.artfora.conf
+++ b/docker/nginx/conf.d/dev.artfora.conf
@@ -1,33 +1,72 @@
 server {
-        listen 80;
-         listen 443 ssl; # managed by Certbot
-        index index.php index.html index.htm index.nginx-debian.html;
-        server_name dev.artfora.artel-workshop.com;
-        server_tokens off;
+    listen 80;
+    server_name dev.artfora.artel-workshop.com;
 
-        gzip            on;
-        gzip_types      text/plain application/xml text/css application/javascript;
-        gzip_min_length 1000;
+    if ($host = dev.artfora.artel-workshop.com) {
+        return 301 https://$host$request_uri;
+    }
+}
+
+    server {
+        listen 443 ssl http2;
+        listen [::]:443 ssl http2;
+        server_name dev.artfora.artel-workshop.com;
+        access_log /var/log/nginx/$host.access.log;
+        error_log  /var/log/nginx/$host.error.log error;
+
+        ssl_certificate /etc/letsencrypt/live/dev.artfora.artel-workshop.com/fullchain.pem; # managed by Certbot
+        ssl_certificate_key /etc/letsencrypt/live/dev.artfora.artel-workshop.com/privkey.pem; # managed by Certbot
+        ssl_session_timeout 1d;
+        ssl_session_cache shared:MozSSL:10m;  # about 40000 sessions
+        ssl_session_tickets off;
+        ssl_protocols TLSv1.3;
+        ssl_prefer_server_ciphers off;
+        add_header Strict-Transport-Security "max-age=63072000" always;
+        ssl_stapling on;
+        ssl_stapling_verify on;
+
+        resolver 1.1.1.1;
 
         location / {
-                    root /home/dev-artfora/artfora-frontend/dist-current;
-                try_files $uri /index.html;
-                expires -1;
+                proxy_pass http://dev-artfora-frontend:3000;
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
+                proxy_buffering off;
+                proxy_request_buffering off;
+                proxy_http_version 1.1;
+                proxy_intercept_errors on;
         }
 
-        location ~ \.php$ {
+       root /home/dev/dev-artfora-backend/public;
+       index index.php index.html index.htm index.nginx-debian.html;
+#        server_name dev.artfora.artel-workshop.com;
+#        location / {
+#                try_files $uri $uri/ /index.php?$query_string;
+#        }
+
+       location ~ \.php$ {
        include fastcgi_params;
        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
        fastcgi_pass dev-artfora-backend:9000;
 
         }
 
+        location ~ /\.ht {
+                deny all;
+        }
+
+}
+
+
+
         # location ~ ^/(auto-doc|products) {
         #         proxy_set_header Host $host;
         #         proxy_set_header  X-Real-IP        $remote_addr;
         #         proxy_set_header  X-Forwarded-For  $proxy_add_x_forwarded_for;
         #         proxy_set_header  X-NginX-Proxy true;
-        #         proxy_pass http://127.0.0.1:8080$is_args$args;
+        #         fastcgi_pass dev-backend:9000;
         # }
 
         # location /api/ {
@@ -36,22 +75,14 @@ server {
         #         proxy_set_header  X-Forwarded-For  $proxy_add_x_forwarded_for;
         #         proxy_set_header  X-NginX-Proxy true;
         #         rewrite ^/api/(.*)$ /$1 break;
-        #         proxy_pass http://127.0.0.1:8080$is_args$args;
+        #         fastcgi_pass dev-backend:9000;
+
         # }
 
         error_page 404 /404.html;
         error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-                root /usr/share/nginx/html;
-        }
-
-        location ~ /\.ht {
-                deny all;
-        }
 
 
     ssl_certificate /etc/letsencrypt/live/dev.artfora.artel-workshop.com/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/dev.artfora.artel-workshop.com/privkey.pem; # managed by Certbot
 
-
-}
