--- a/docker/docker-compose.example
+++ b/docker/docker-compose.example
@@ -1,13 +1,11 @@
 version: '3.9'
 services:
   ${short_branch}-${CI_PROJECT_NAME}:
-    image: ${short_branch}-${CI_PROJECT_NAME}-${CI_COMMIT_SHORT_SHA}
+    image: ${CI_REGISTRY_IMAGE}:${short_branch}-${CI_PROJECT_NAME}-${CI_COMMIT_SHORT_SHA}
     volumes:
       - ${short_branch}-${CI_PROJECT_NAME}-${CI_COMMIT_SHORT_SHA}:/app/
       - ${short_branch}-pv-storage:/home/storage
       - ${short_branch}-pv-logs:/home/logs 
-      - ./docker/php-fpm/php.ini-development:/usr/local/etc/php/php.ini-development
-      - ./docker/php-fpm/php.ini-production:/usr/local/etc/php/php.ini-production
     container_name: ${short_branch}-${CI_PROJECT_NAME}
     restart: on-failure
     networks:
