--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ build:
      --cache-dir=/tmp
      --snapshotMode=redo
      --context "${CI_PROJECT_DIR}"
-     --dockerfile "${CI_PROJECT_DIR}/docker/Dockerfile"
+     --dockerfile "${CI_PROJECT_DIR}/Dockerfile"
      --destination "${CI_REGISTRY_IMAGE}:${short_branch}-${CI_PROJECT_NAME}-${CI_COMMIT_SHORT_SHA}"
 
  environment:
