--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ build:
    - cat $env > .env
    - cat .env
    - >
-     /kaniko/executor
+     executor
      --use-new-run=true
      --cleanup
      --cache
