--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -94,9 +94,9 @@ deploy:
    - echo "--- clean old volumes ---"
    - volume_list=$(docker -H "ssh://root@${host}" volume ls | grep "${short_branch}-${CI_PROJECT_NAME}" | grep -v ${CI_COMMIT_SHORT_SHA} | awk '{print $2}') && for item in ${volume_list//\\n\ }; do docker -H "ssh://root@${host}" volume rm $item; done
    - > 
-     dir_list=$(sudo ls /home/${short_branch}/ | grep "${short_branch}-${CI_PROJECT_NAME}" | grep -v "${CI_COMMIT_SHORT_SHA}" ) && 
+     dir_list=$( ssh root@${host} "ls /home/${short_branch}/ | grep ${short_branch}-${CI_PROJECT_NAME} | grep -v ${CI_COMMIT_SHORT_SHA}") && 
      for item in ${dir_list//\\n\ };
-     do  ssh root@${host} rm -rf "/home/${short_branch}/$item"; 
+     do  ssh root@${host} "rm -rf /home/${short_branch}/$item";
      done
    - echo "--- clean unused images ---"
    - docker -H "ssh://root@${host}" system prune -a -f
