--- a/docker/docker-compose.example
+++ b/docker/docker-compose.example
@@ -14,8 +14,8 @@ services:
     container_name: nginx
     image: nginx:1.20.1
     volumes:
-      - ./docker/nginx/conf.d/:/etc/nginx/conf.d/
-      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - /root/nginx/conf.d/:/etc/nginx/conf.d/
+      - /root/nginx/nginx.conf:/etc/nginx/nginx.conf
       - /etc/letsencrypt/:/etc/letsencrypt
       - /home/dev-artfora-backend:/home/${short_branch}/${short_branch}-${CI_PROJECT_NAME}
       - ${short_branch}-pv-storage:/home/storage
