--- a/docker/nginx/conf.d/dev.api.artfora.conf
+++ b/docker/nginx/conf.d/dev.api.artfora.conf
@@ -1,21 +1,21 @@
 server {
-        root /home/dev/dev-artfora-backend/public;
-        index index.php index.html index.htm index.nginx-debian.html;
-        server_name dev.api.artfora.artel-workshop.com;
-        location / {
-                try_files $uri $uri/ /index.php?$query_string;
-        }
+    root /app/public;
+    index index.php index.html index.htm index.nginx-debian.html;
+    server_name dev.api.artfora.artel-workshop.com;
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
 
-        location ~ \.php$ {
-       include fastcgi_params;
-       fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-       fastcgi_pass dev-artfora-backend:9000;
+    location ~ \.php$ {
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_pass php:9000;
 
-        }
+    }
 
-        location ~ /\.ht {
-                deny all;
-        }
+    location ~ /\.ht {
+        deny all;
+    }
 
     listen 443 ssl; # managed by Certbot
     ssl_certificate /etc/letsencrypt/live/dev.artfora.artel-workshop.com/fullchain.pem; # managed by Certbot
@@ -26,12 +26,12 @@ server {
 server {
     if ($host = dev.api.artfora.artel-workshop.com) {
         return 301 https://$host$request_uri;
-    } # managed by Certbot
+        } # managed by Certbot
 
 
         listen 80;
         server_name dev.api.artfora.artel-workshop.com;
-    return 404; # managed by Certbot
+        return 404; # managed by Certbot
 
 
-}
+    }
