feat add subsciption and renew histories table and add fedex composer

--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,15 @@
     "ext-openssl": "*",
     "artel/laravel-helpers": ">=2.2.3",
     "biscolab/laravel-recaptcha": "^5.0",
-    "guzzlehttp/guzzle": "^7.2",
+    "guzzlehttp/guzzle": "^7.5",
     "intervention/imagecache": "^2.5",
+    "jeremy-dunn/php-fedex-api-wrapper": "^3.0",
     "laravel/framework": "9.*",
     "laravel/sanctum": "^3.0",
     "laravel/tinker": "2.*",
+    "league/iso3166": "^4.3",
     "php-open-source-saver/jwt-auth": "^2.0",
+    "pragmarx/countries": "*",
     "psr/simple-cache": "^2.0",
     "stripe/stripe-php": "^10.16@beta",
     "twilio/sdk": "^7.0@RC",
