--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "laravel/framework": "9.*",
     "laravel/sanctum": "^3.0",
     "laravel/tinker": "2.*",
+    "league/commonmark": "^2.4",
     "league/iso3166": "^4.3",
     "php-open-source-saver/jwt-auth": "^2.0",
     "pragmarx/countries": "*",
